--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -61,100 +61,113 @@
     }
    ],
    "source": [
-    "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
-    "# Função para montar o gráfico\n",
-    "def mount_graphic(list_counts=None, list_index=None, title=None, label=None):\n",
-    "    index = np.arange(len(list_index))\n",
-    "    plt.bar(index, list_counts)\n",
-    "    plt.xticks(index, list_index, rotation=45, ha='right')\n",
-    "    plt.ylabel(label)\n",
-    "    plt.title(title)\n",
-    "    plt.tight_layout()\n",
-    "    plt.show()\n",
+    "class VisualizacaoDeDados:\n",
     "\n",
-    "# Função para tratar os dados e gerar gráficos\n",
-    "def treats_the_data(column_name=None, title=None, label=None, column_data_one=None, column_data_two=None, \n",
-    "                    column_data_three=None, column_data_four=None, column_data_five=None):\n",
-    "    \n",
-    "    path = '/home/lucas/Documentos/faculdade/projects/visualizacao_da_informacao/stack-overflow-developer-survey-2023/survey_results_public.csv'\n",
-    "    encoding = 'utf-8'\n",
+    "    def __init__(self, path, encoding):\n",
+    "        self.path = path\n",
+    "        self.encoding = encoding\n",
     "\n",
-    "    # Tentando ler o arquivo CSV\n",
-    "    try:\n",
-    "        df = pd.read_csv(path, encoding=encoding)\n",
-    "        print(f\"Arquivo lido com sucesso usando a codificação: {encoding}\")\n",
-    "    except UnicodeDecodeError:\n",
-    "        print(f\"Erro ao ler o arquivo com a codificação: {encoding}\")\n",
-    "        return\n",
-    "    except FileNotFoundError:\n",
-    "        print(f\"Erro: O arquivo em {path} não foi encontrado.\")\n",
-    "        return\n",
-    "    except pd.errors.EmptyDataError:\n",
-    "        print(\"Erro: O arquivo está vazio.\")\n",
-    "        return\n",
-    "    except pd.errors.ParserError:\n",
-    "        print(\"Erro: Ocorreu um problema ao analisar o arquivo.\")\n",
-    "        return\n",
-    "    except Exception as e:\n",
-    "        print(f\"Ocorreu um erro: {e}\")\n",
-    "        return\n",
+    "    # Função para montar o gráfico\n",
+    "    def mount_graphic(self, list_counts=None, list_index=None, title=None, \n",
+    "                      label=None):\n",
+    "        if list_counts is None or list_index is None:\n",
+    "            print(\"Listas de dados e índices não podem ser None.\")\n",
+    "            return\n",
     "\n",
-    "    # Verificando se o DataFrame foi carregado com sucesso\n",
-    "    if df is not None: \n",
+    "        index = np.arange(len(list_index))\n",
+    "        plt.bar(index, list_counts)\n",
+    "        plt.xticks(index, list_index, rotation=45, ha='right')\n",
+    "        plt.ylabel(label)\n",
+    "        plt.title(title)\n",
+    "        plt.tight_layout()\n",
+    "        plt.show()\n",
+    "\n",
+    "    # Função para tratar os dados e gerar gráficos\n",
+    "    def treats_the_data(self, column_name, title=None, label=None, \n",
+    "                        column_data_one=None, column_data_two=None,\n",
+    "                        column_data_three=None, column_data_four=None, \n",
+    "                        column_data_five=None):\n",
+    "\n",
+    "        # ler o arquivo CSV\n",
     "        try:\n",
-    "            print(f'--- Leitura da coluna {column_name} ---')\n",
-    "            column = df[column_name].dropna()\n",
-    "\n",
-    "            # Inicializando listas para os dados e índices\n",
-    "            data_index = []\n",
-    "            counts = []\n",
-    "\n",
-    "            # Adicionando dados e índices à lista se os parâmetros forem fornecidos\n",
-    "            if column_data_one:\n",
-    "                data_index.append(column_data_one)\n",
-    "                counts.append(column.value_counts().get(column_data_one, 0))\n",
-    "            if column_data_two:\n",
-    "                data_index.append(column_data_two)\n",
-    "                counts.append(column.value_counts().get(column_data_two, 0))\n",
-    "            if column_data_three:\n",
-    "                data_index.append(column_data_three)\n",
-    "                counts.append(column.value_counts().get(column_data_three, 0))\n",
-    "            if column_data_four:\n",
-    "                data_index.append(column_data_four)\n",
-    "                counts.append(column.value_counts().get(column_data_four, 0))\n",
-    "            if column_data_five:\n",
-    "                data_index.append(column_data_five)\n",
-    "                counts.append(column.value_counts().get(column_data_five, 0))\n",
-    "\n",
-    "            # Montando o gráfico\n",
-    "            mount_graphic(list_counts=counts, list_index=data_index, title=title, label=label)\n",
-    "\n",
-    "        except KeyError:\n",
-    "            print(f'A coluna {column_name} não existe no DataFrame.')\n",
+    "            df = pd.read_csv(self.path, encoding=self.encoding)\n",
+    "            print(f\"Arquivo lido com sucesso usando a codificação: {self.encoding}\")\n",
+    "        except UnicodeDecodeError:\n",
+    "            print(f\"Erro ao ler o arquivo com a codificação: {self.encoding}\")\n",
+    "            return\n",
+    "        except FileNotFoundError:\n",
+    "            print(f\"Erro: O arquivo em {self.path} não foi encontrado.\")\n",
+    "            return\n",
+    "        except pd.errors.EmptyDataError:\n",
+    "            print(\"Erro: O arquivo está vazio.\")\n",
+    "            return\n",
+    "        except pd.errors.ParserError:\n",
+    "            print(\"Erro: Ocorreu um problema ao analisar o arquivo.\")\n",
+    "            return\n",
     "        except Exception as e:\n",
-    "            print(f'Ocorreu um erro ao processar os dados: {e}')\n",
-    "    else:\n",
-    "        print(\"Falha ao ler o arquivo com as codificações testadas.\")\n",
+    "            print(f\"Ocorreu um erro: {e}\")\n",
+    "            return\n",
     "\n",
-    "# Referente a idades\n",
-    "treats_the_data(column_name='Age', title='Quantidade total de respostas por faixa etária - 2023',\n",
+    "        # Verificando se o DataFrame foi carregado com sucesso\n",
+    "        if df is not None:\n",
+    "            try:\n",
+    "                print(f'--- Leitura da coluna {column_name} ---')\n",
+    "                column = df[column_name].dropna()\n",
+    "\n",
+    "                # Inicializando listas para os dados e índices\n",
+    "                data_index = []\n",
+    "                counts = []\n",
+    "\n",
+    "                # Adicionando dados e índices à lista se os parâmetros forem fornecidos\n",
+    "                if column_data_one:\n",
+    "                    data_index.append(column_data_one)\n",
+    "                    counts.append(column.value_counts().get(column_data_one, 0))\n",
+    "                if column_data_two:\n",
+    "                    data_index.append(column_data_two)\n",
+    "                    counts.append(column.value_counts().get(column_data_two, 0))\n",
+    "                if column_data_three:\n",
+    "                    data_index.append(column_data_three)\n",
+    "                    counts.append(column.value_counts().get(column_data_three, 0))\n",
+    "                if column_data_four:\n",
+    "                    data_index.append(column_data_four)\n",
+    "                    counts.append(column.value_counts().get(column_data_four, 0))\n",
+    "                if column_data_five:\n",
+    "                    data_index.append(column_data_five)\n",
+    "                    counts.append(column.value_counts().get(column_data_five, 0))\n",
+    "\n",
+    "                # Montando o gráfico\n",
+    "                self.mount_graphic(list_counts=counts, list_index=data_index, \n",
+    "                                   title=title, label=label)\n",
+    "\n",
+    "            except KeyError:\n",
+    "                print(f'A coluna {column_name} não existe no DataFrame.')\n",
+    "            except Exception as e:\n",
+    "                print(f'Ocorreu um erro ao processar os dados: {e}')\n",
+    "        else:\n",
+    "            print(\"Falha ao ler o arquivo com as codificações testadas.\")\n",
+    "\n",
+    "# Exemplo de uso\n",
+    "path = '/home/lucas/Documentos/faculdade/projects/visualizacao_da_informacao/stack-overflow-developer-survey-2023/survey_results_public.csv'\n",
+    "encoding = 'utf-8'\n",
+    "visualizacao = VisualizacaoDeDados(path, encoding)\n",
+    "\n",
+    "visualizacao.treats_the_data(column_name='Age', title='Quantidade total de respostas por faixa etária - 2023',\n",
     "                label='Quantidades', column_data_one='18-24 years old', \n",
     "                column_data_two='25-34 years old', column_data_three='35-44 years old',\n",
     "                column_data_four='45-54 years old')\n",
     "\n",
-    "# Referente à modalidade de trabalho\n",
-    "treats_the_data(column_name='RemoteWork', title='Quantidade total de respostas por modalidade de trabalho - 2023',\n",
+    "visualizacao.treats_the_data(column_name='RemoteWork', title='Quantidade total de respostas por modalidade de trabalho - 2023',\n",
     "                label='Quantidades', column_data_one='Remote', \n",
     "                column_data_two='Hybrid (some remote, some in-person)', column_data_three='In-person')\n",
     "\n",
-    "# Referente ao tipo de atividade\n",
-    "treats_the_data(column_name='CodingActivities', title='Quantidade total de respostas por atividade - 2023',\n",
+    "visualizacao.treats_the_data(column_name='CodingActivities', title='Quantidade total de respostas por atividade - 2023',\n",
     "                label='Quantidades', column_data_one='Hobby', column_data_two='Contribute to open-source projects', \n",
     "                column_data_three='Bootstrapping a business', column_data_four=\"I don’t code outside of work\",\n",
-    "                column_data_five='Professional development or self-paced learning from online courses')\n"
+    "                column_data_five='Professional development or self-paced learning from online courses')"
    ]
   }
  ],
