refactor: Ajusta o retorno da função.

--- a/src/main.ipynb
+++ b/src/main.ipynb
@@ -75,8 +75,8 @@
     "    def mount_graphic(self, list_counts=None, list_index=None, title=None, \n",
     "                      label=None):\n",
     "        if list_counts is None or list_index is None:\n",
-    "            print(\"Listas de dados e índices não podem ser None.\")\n",
-    "            return\n",
+    "            return \"Listas de dados e índices não podem ser None.\"\n",
+    "            \n",
     "\n",
     "        index = np.arange(len(list_index))\n",
     "        plt.bar(index, list_counts)\n",
